[tool.poetry]
name = "parking-location"
version = "0.1.0"
description = ""
authors = ["jaeyunim00 <71920791+jaeyunim00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
